optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_split_spread_props.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$((props) => {
	return (
		<div {...props}></div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_3ghsHSPcTK0 = ()=>import("./test.tsx_test_component_3ghsHSPcTK0");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_3ghsHSPcTK0, "test_component_3ghsHSPcTK0"));


None
============================= test.tsx_test_component_3ghsHSPcTK0.js (ENTRY POINT)==

import { _getConstProps, _getVarProps, _jsxSplit } from "@qwik.dev/core";
export const test_component_3ghsHSPcTK0 = (props)=>{
	return /*#__PURE__*/ _jsxSplit("div", { ..._getVarProps(props) }, _getConstProps(props), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_3ghsHSPcTK0",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "3ghsHSPcTK0",
  "canonicalFilename": "test.tsx_test_component_3ghsHSPcTK0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    125
  ]
}
*/
== DIAGNOSTICS ==

[]
