optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_split_spread_props_with_additional_prop3.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import { Foo } from './foo';

export default component$((props) => {
	return (
		<Foo s={Math.random()} {...props} hello {...globalThis.nothing} />
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_3ghsHSPcTK0 = ()=>import("./test.tsx_test_component_3ghsHSPcTK0");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_3ghsHSPcTK0, "test_component_3ghsHSPcTK0"));


None
============================= test.tsx_test_component_3ghsHSPcTK0.js (ENTRY POINT)==

import { Foo } from "./foo";
import { _getConstProps, _getVarProps, _jsxSplit } from "@qwik.dev/core";
export const test_component_3ghsHSPcTK0 = (props)=>{
	return _jsxSplit(Foo, {
		s: Math.random(),
		..._getVarProps(props),
		hello: true,
		..._getVarProps(globalThis.nothing)
	}, _getConstProps(globalThis.nothing), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_3ghsHSPcTK0",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "3ghsHSPcTK0",
  "canonicalFilename": "test.tsx_test_component_3ghsHSPcTK0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    101,
    198
  ]
}
*/
== DIAGNOSTICS ==

[]
