optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_transform_event_names_without_jsx_transpile.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import mongo from 'mongodb';

export const Greeter = component$(() => {
	// Double count watch
	useTask$(async () => {
		await mongo.users();
	});
	return (
		<div>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
		</div>
	)
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ibjq2Rfokxw = ()=>import("./test.tsx_Greeter_component_useTask_ibjq2Rfokxw");
const i_n7HuG2hhU0Q = ()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_n7HuG2hhU0Q, "Greeter_component_n7HuG2hhU0Q"));


None
============================= test.tsx_Greeter_component_useTask_ibjq2Rfokxw.tsx (ENTRY POINT)==

import mongo from "mongodb";
export const Greeter_component_useTask_ibjq2Rfokxw = async ()=>{
	await mongo.users();
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_useTask_ibjq2Rfokxw",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_useTask",
  "hash": "ibjq2Rfokxw",
  "canonicalFilename": "test.tsx_Greeter_component_useTask_ibjq2Rfokxw",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    153,
    192
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_2 = ()=>import("./test.tsx");
const i_1 = ()=>import("./test.tsx");
const i_ibjq2Rfokxw = ()=>import("./test.tsx_Greeter_component_useTask_ibjq2Rfokxw");
export const Greeter_component_n7HuG2hhU0Q = ()=>{
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ibjq2Rfokxw, "Greeter_component_useTask_ibjq2Rfokxw"));
	return <div>
			<div on:click={/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ibjq2Rfokxw, "Greeter_component_useTask_ibjq2Rfokxw"))} />
			<div on:click={/*#__PURE__*/ qrl(i_1, "Greeter_component_div_div_onClick_1")} />
			<div on:click={/*#__PURE__*/ qrl(i_2, "Greeter_component_div_div_onClick_2")} />
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    112,
    316
  ]
}
*/
== DIAGNOSTICS ==

[]
