optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_transform_multiple_event_handlers_case2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(function() {
  const data = useSignal<Signal<any>[]>([]);
  return <div>
	{data.value.map((row, idx) => (
	  <div onClick$={() => console.log(row.value.id, idx)} onMouseOver$={() => console.log('over' + row.value.id)}>
		<p onClick$={() => console.log('inner' + row.value.id)}>{item.value.id}</p>
	  </div>
	))}
  </div>;
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
const i_QcT2tClxN5w = ()=>import("./test.tsx_Foo_component_div_map_div_p_onClick_QcT2tClxN5w");
const i_ixif7o07rP0 = ()=>import("./test.tsx_Foo_component_div_map_div_onMouseOver_ixif7o07rP0");
const i_mfLVIFxdDiU = ()=>import("./test.tsx_Foo_component_div_map_div_onClick_mfLVIFxdDiU");
export const Foo_component_HTDRsvUbLiE = function() {
	const data = useSignal([]);
	return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row, idx)=>/*#__PURE__*/ _jsxSorted("div", {
		"on:click": /*#__PURE__*/ qrl(i_mfLVIFxdDiU, "Foo_component_div_map_div_onClick_mfLVIFxdDiU"),
		"on:mouseover": /*#__PURE__*/ qrl(i_ixif7o07rP0, "Foo_component_div_map_div_onMouseOver_ixif7o07rP0"),
		"q:ps": [idx, row]
	}, null, /*#__PURE__*/ _jsxSorted("p", {
		"on:click": /*#__PURE__*/ qrl(i_QcT2tClxN5w, "Foo_component_div_map_div_p_onClick_QcT2tClxN5w"),
		"q:p": row
	}, null, item.value.id, 1, null), 3, null)), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    87,
    410
  ]
}
*/
============================= test.tsx_Foo_component_div_map_div_onClick_mfLVIFxdDiU.js (ENTRY POINT)==

export const Foo_component_div_map_div_onClick_mfLVIFxdDiU = (_, _1, idx, row)=>console.log(row.value.id, idx);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_map_div_onClick_mfLVIFxdDiU",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_map_div_onClick",
  "hash": "mfLVIFxdDiU",
  "canonicalFilename": "test.tsx_Foo_component_div_map_div_onClick_mfLVIFxdDiU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_map_div_p_onClick_QcT2tClxN5w.js (ENTRY POINT)==

export const Foo_component_div_map_div_p_onClick_QcT2tClxN5w = (_, _1, row)=>console.log("inner" + row.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_map_div_p_onClick_QcT2tClxN5w",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_map_div_p_onClick",
  "hash": "QcT2tClxN5w",
  "canonicalFilename": "test.tsx_Foo_component_div_map_div_p_onClick_QcT2tClxN5w",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_map_div_onMouseOver_ixif7o07rP0.js (ENTRY POINT)==

export const Foo_component_div_map_div_onMouseOver_ixif7o07rP0 = (_, _1, row)=>console.log("over" + row.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_map_div_onMouseOver_ixif7o07rP0",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_map_div_onMouseOver",
  "hash": "ixif7o07rP0",
  "canonicalFilename": "test.tsx_Foo_component_div_map_div_onMouseOver_ixif7o07rP0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onMouseOver$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
