optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_transform_qrls_in_ternary_expression.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
	const enabled = useSignal(false);
	const input = useSignal("");

  return (
     <input
		id="input"
		onInput$={
		enabled.value
			? $((ev, el) => {
				input.value = el.value;
			})
			: undefined
		}
		onFocus$={() => {
			enabled.value = true;
		}}
	/>
  );
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_GIFLU8BTj7k = ()=>import("./test.tsx_FieldInput_component_input_onInput_1_GIFLU8BTj7k");
const i_O84bGdeej0g = ()=>import("./test.tsx_FieldInput_component_O84bGdeej0g");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_O84bGdeej0g, "FieldInput_component_O84bGdeej0g"));


None
============================= test.tsx_FieldInput_component_input_onInput_1_GIFLU8BTj7k.js (ENTRY POINT)==

export const FieldInput_component_input_onInput_1_GIFLU8BTj7k = (ev, el)=>{
	const [input] = useLexicalScope();
	input.value = el.value;
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_onInput_1_GIFLU8BTj7k",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_onInput_1",
  "hash": "GIFLU8BTj7k",
  "canonicalFilename": "test.tsx_FieldInput_component_input_onInput_1_GIFLU8BTj7k",
  "path": "",
  "extension": "js",
  "parent": "onInput",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    243,
    289
  ]
}
*/
============================= test.tsx_FieldInput_component_O84bGdeej0g.js (ENTRY POINT)==

import { _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
const i_onFocus = ()=>import("./test.tsx");
const i_GIFLU8BTj7k = ()=>import("./test.tsx_FieldInput_component_input_onInput_1_GIFLU8BTj7k");
export const FieldInput_component_O84bGdeej0g = ()=>{
	const enabled = useSignal(false);
	const input = useSignal("");
	return /*#__PURE__*/ _jsxSorted("input", {
		on:input: /*#__PURE__*/ qrl(i_GIFLU8BTj7k, "FieldInput_component_input_onInput_1_GIFLU8BTj7k", [input]),
		on:focus: /*#__PURE__*/ qrl(i_onFocus, "FieldInput_component_input_onFocus", [enabled])
	}, { id: "input" }, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_O84bGdeej0g",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "O84bGdeej0g",
  "canonicalFilename": "test.tsx_FieldInput_component_O84bGdeej0g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    97,
    370
  ]
}
*/
== DIAGNOSTICS ==

[]
